Completing Refund services